# deciding-isotactics

./: .gitignore  CMakeLists.txt  README.md  build.sh
docs/: switch_compiler.md  xcode.md
iso-decision/src/: CMakeLists.txt  Main.cpp
iso-decision/tests/crash-example-1/: alignment.json  det_m1.dot  m1.dot  m1.dot_m2.dot_alignment.json_witness_graph.dot  m2.dot  out.txt  witness.dot
iso-decision/tests/crash-example-2/: alignment.json  det_m1.dot  m1.dot  m1.dot_m2.dot_alignment.json_witness_graph.dot  m2.dot
iso-decision/tests/determinize-example-1/: alignment.json  det_m1.dot  m1.dot  m1.dot_m2.dot_alignment.json_witness_graph.dot  m2.dot
iso-decision/tests/example-11/: alignment.json  m1.det.dot  m1.dot_m2.dot_alignment.json_witness_graph.dot  m2.dot  witness.dot
iso-decision/tests/example-12/: alignment.json  m1.dot  m1.dot_m2.dot_alignment.json_witness_graph.dot
iso-decision/tests/example-paper/: m1.dot  m1.dot_m2.dot_alignment.json_witness_graph.dot
iso-decision/tests/maximality-negative/: alignment.json  m1.dot_m2.dot_alignment.json_witness_graph.dot
iso-decision/tests/maximality-positive/: alignment.json  m1.dot  m1.dot_m2.dot_alignment.json_witness_graph.dot
iso-decision/tests/tiny-1/: alignment.json  m1.dot_m2.dot_alignment.json_witness_graph.dot  m2.dot
iso-lib/include/: AlignmentUtils.hpp  DetGraph.hpp  GraphUtils.hpp  HelperMaps.hpp  Logging.hpp  MatchUtils.hpp  Utils.hpp  WitnessUtils.hpp
iso-lib/src/: AlignmentUtils.cpp  CMakeLists.txt  CompareUtils.cpp  DetGraph.cpp  DetWitnessUtils.cpp  GraphUtils.cpp  MatchUtils.cpp  Utils.cpp  WitnessUtils.cpp
isotactics/: CMakeLists.txt  Doxyfile.in  LICENSE  build.sh  run.sh
isotactics/dot/: dwgL.dot
isotactics/include/: AlignmentUtils.h  AlignmentUtils.hpp  CompareUtils.hpp  DetWitnessUtils.hpp  GraphUtils.h  GraphUtils.hpp  MatchUtils.hpp  Student.h  Utils.hpp  WitnessUtils.hpp
isotactics/iso-decision/src/: CMakeLists.txt  Main.cpp
isotactics/iso-dev/src/: CMakeList.txt  CMakeLists.txt  Main.cpp
isotactics/iso-lib/include/: AlignmentUtils.hpp  CompareUtils.hpp  DetGraph.hpp  DetWitnessUtils.hpp  GraphUtils.hpp  HelperMaps.hpp  WitnessUtils.hpp
isotactics/iso-lib/src/: AlignmentUtils.cpp  CMakeLists.txt  DetGraph.cpp  DetWitnessUtils.cpp  GraphUtils.cpp  HelperMaps.cpp  MatchUtils.cpp  WitnessUtils.cpp
isotactics/resources/: m1.dot  m2.dot  ndAlignment.json
isotactics/resources/dot/: dwgR.dot
isotactics/src/: AlignmentUtils.cpp  CompareUtils.cpp  DetWitnessUtils.cpp  GraphUtils.cpp  Main.cpp  MatchUtils.cpp  Student.cpp  Utils.cpp  WitnessUtils.cpp
resources/: alignment.json  m1.dot_m2.dot_alignment.json_witness_graph.dot
resources/dot/: wg.dot
